# llmLibrarian

./: .coverage  .env.mcp.example  .gitignore  .mcp.json  .mcpbignore  AGENTS.md  CLAUDE.md  FILESYSTEM_BLOAT_ROOT_CAUSE.md  HANDOFF_hnsw_desync_2026-05-21.md  README.md  SECURITY_AND_TESTING.md  SERVICE_INTAKE.md  SETUP_REMOTE.md  adversarial_eval_smoke.json  archetypes.yaml  cli.py  gemini_summary.md  llmlibrarian-0.1.0.mcpb  manifest.json  mcp_server.py  pal.py  pal.spec  pal_daemon.py  pal_pull.py  pal_registry.py  pal_watch.py  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.github/workflows/: tests.yml
deploy/launchd/: com.llmlibrarian.chroma.plist  com.tjm4.llmlibrarian-mcp.plist
deploy/systemd/: install.sh  llmlibrarian-chroma@.service  llmlibrarian-mcp.service  llmlibrarian-mcp@.service
docs/: CHROMA_AND_STACK.md  GUIDE.md  IMPLEMENTATION_STATUS_AND_FIT_GAP_REPORT.md  MCP_TAILSCALE_FUNNEL.md  ROADMAP.md  TECH.md  orchestration-matrix.md  personal_gap_focus_run.md  personal_gap_full_run.md  personal_gap_job_prompts.md  personal_gap_job_run.md  personal_gap_prompt_ledger.md  personal_gap_prompt_metrics.json
jobs/: personal_gap_job.py
plugin/: .mcp.json  plugin.json
scripts/: export_firefox_bookmarks.py  install.sh  publish_mcp_funnel.sh  reindex_from_registry_backup.py  run_chroma_server.sh  run_mcp_http.sh
src/: WsQD.py  YRvy.py  artifacts.py  chroma_backend.py  chroma_client.py  chroma_lock.py  constants.py  doc_type_taxonomy.py  embeddings.py  env_bootstrap.py  file_registry.py  floor.py  image_embeddings.py  indexer.py  ingest.py  ingest_journal.py  jobs_runtime.py  load_config.py  operations.py  operations_find.py  processors.py  query.py  query_engine.py  reranker.py  silo_audit.py  state.py  style.py  vision_ocr.swift  watch_telemetry.py
src/ingest/: __init__.py  batch.py  capabilities.py  chunking.py  incremental.py  pipeline.py  run_add.py  run_index.py  watch_scan.py  zip_flow.py
src/llmli_evals/: __init__.py  adversarial.py
src/orchestration/: __init__.py  ingest.py
src/query/: __init__.py  academic.py  academic_resolver.py  catalog.py  code_language.py  context.py  core.py  core_reexports.py  core_support.py  expansion.py  filename_dates.py  find_format.py  formatting.py  guardrails.py  intent.py  metadata.py  project_count.py  retrieval.py  retrieve_locked.py  scope_binding.py  tax_resolver.py  timeline.py  trace.py
src/tax/: __init__.py  ledger.py  normalize.py  query_contract.py  schema.py
tests/: conftest.py
tests/contract/: test_ingest_entrypoints.py
tests/integration/: test_chroma_http_server.py  test_concurrent_subprocess_hnsw.py  test_hnsw_sqlite_consistency.py  test_image_fixture_ingest.py  test_income_year_query.py  test_incremental_add.py  test_pdf_form_values.py  test_project_count_integration.py  test_tax_deterministic_qa.py  test_tax_field_lookup_regression.py  test_zip_extraction.py
tests/unit/: test_academic_resolver.py  test_adversarial_eval.py  test_artifacts_pipeline.py  test_chroma_client_guard.py  test_chroma_client_preflight.py  test_chroma_client_release.py  test_chroma_http_client.py  test_chroma_lock.py  test_chroma_probe_pool.py  test_chunking.py  test_cloud_path_detection.py  test_cmd_rm.py  test_code_language.py  test_collect_files.py  test_confidence_fallback.py  test_context_and_formatting.py  test_context_budget.py  test_csv_rank_guardrail.py  test_direct_value_guardrail.py  test_doc_type_from_content.py  test_doc_type_from_path.py  test_embeddings.py  (+74 more)
(+11 files in other folders)
