[project]
name = "llmLibrarian"
version = "0.1.0"
description = "Deterministic, locally-hosted context engine (llmli + pal agent CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "PyYAML>=6.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "tqdm>=4.66.0",
    "pdfplumber>=0.11.9",
    "watchdog>=3.0.0",
    "typer>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
llmli = "cli:main"
pal = "pal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"pal.py" = "pal.py"
"archetypes.yaml" = "archetypes.yaml"
