[project]
name = "llmLibrarian"
version = "0.1.0"
description = "Deterministic, locally-hosted context engine (llmli + pal agent CLI)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core: always required for llmli, pal, and MCP server
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "PyYAML>=6.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "tqdm>=4.66.0",
    "pdfplumber>=0.11.9",
    "typer>=0.21.0",
    "fastmcp>=2.0",
    "sentence-transformers>=2.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
# Image embeddings + vision summaries (llmli add --image-vision)
image = [
    "open-clip-torch>=2.26.1",
    "torch>=2.4.0",
    "Pillow>=10.0.0",
]
# OCR for scanned PDFs and image text extraction
ocr = [
    "paddleocr>=3.4.0",
    "tesseract>=0.1.3",
]
# Cross-encoder reranking (LLMLIBRARIAN_RERANK=1) — sentence-transformers in core deps
rerank = []
# File watching for pal watch/pull --watch
watch = [
    "watchdog>=3.0.0",
]
# Adversarial evaluation suite (llmli eval-adversarial)
eval = [
    "evals>=3.0.1.post1",
    "pydantic-evals>=1.58.0",
]
# Everything except build tools
all = [
    "llmLibrarian[image,ocr,rerank,watch,eval]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
llmli = "cli:main"
pal = "pal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = [".", "src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"archetypes.yaml" = "archetypes.yaml"
"src/vision_ocr.swift" = "src/vision_ocr.swift"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
